--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "leaflet": "^1.8.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.11.0",
     "react-toastify": "^9.0.1",
+    "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
