--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.11.0",
     "react-toastify": "^9.0.1",
+    "sweetalert2": "^11.5.0",
     "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
   },
